Fixed message sizing to avoid scrollbars

--- a/static/css/app.less
+++ b/static/css/app.less
@@ -373,6 +373,8 @@ body {
                 white-space: inherit;
                 display: inline-block;
                 width: 100%;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
                 overflow: hidden;
                 text-overflow: ellipsis;
             }
